--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "author": "F2T9",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.6",
-    "nodemon": "^2.0.7",
-    "passport": "^0.4.1"
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "session": "^0.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
