added express-sessions, passport-google-oauth20

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.6",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "session": "^0.1.0"
   },
   "devDependencies": {
