--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "F2T9",
   "license": "MIT",
   "dependencies": {
+    "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
