started adding multer/cloudinary  middleware

--- a/config/.env
+++ b/config/.env
@@ -2,3 +2,6 @@ PORT = 3000
 DB_URI = mongodb+srv://yoda:TheForce231@cluster0.uyfth.mongodb.net/theNunGram?retryWrites=true&w=majority
 GOOGLE_ID = 979307268393-7pg6rgsptosq12luhjrj5feq1s47hus0.apps.googleusercontent.com
 GOOGLE_SECRET = 00YBEtIyS-JPcJZzO8XdEZMu
+CLOUD_NAME = dxdj5difo
+API_KEY = 411773667234465
+API_SECRET = N02eb8K0hLC_8UFdZtEk0XB86LM
