--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "F2T9",
   "license": "MIT",
   "dependencies": {
+    "cloudinary": "^1.25.1",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -19,6 +20,7 @@
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.6",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "session": "^0.1.0"
