amended env variables required to include auth

--- a/config/example.env
+++ b/config/example.env
@@ -1,5 +1,7 @@
     PORT = 2121 (can be any port example: 3000)
     DB_STRING = your database URI
+    GOOGLE_ID = your google project ID on Google Cloud Console
+    GOOGLE_SECRET = your google project secret on Google Cloud Console
     CLOUD_NAME = your cloudinary cloud name
     API_KEY = your cloudinary api key
     API_SECRET = your cloudinary api secret
