--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "cloudinary": "^1.25.1",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
+    "db": "^3.3.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "mongo": "^0.1.0",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.6",
     "morgan": "^1.10.0",
@@ -27,5 +29,13 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yobee333/theNunGram.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yobee333/theNunGram/issues"
+  },
+  "homepage": "https://github.com/yobee333/theNunGram#readme"
 }
