--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build-css": "tailwindcss build src/styles.css -o public/css/styles.css"
   },
   "author": "F2T9",
   "license": "MIT",
@@ -28,7 +29,10 @@
     "session": "^0.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "autoprefixer": "^10.2.5",
+    "nodemon": "^2.0.7",
+    "postcss": "^8.2.13",
+    "tailwindcss": "^2.1.2"
   },
   "repository": {
     "type": "git",
