--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "method-override": "^3.0.0",
     "mongo": "^0.1.0",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.6",
