--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build-css": "tailwindcss build src/styles.css -o public/css/styles.css"
+    "build:css": "tailwindcss build src/styles.css -o public/css/styles.css"
   },
   "author": "F2T9",
   "license": "MIT",
