--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "mongo": "^0.1.0",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.6",
